syntax = "proto3";

package bcmpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/blockchainpb/bcmpb";

import "blockchainpb/blockchainpb.proto";

import "mir/codegen_extensions.proto";

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    NewBlock          new_block           = 1;
    NewChain          new_chain           = 2;

    GetBlockRequest   get_block_request   = 3;
    GetBlockResponse  get_block_response  = 4;
  }
}

message NewBlock {
  option (mir.event) = true;
  
  blockchainpb.Block block = 1;
}

message NewChain {
  option (mir.event) = true;
  
  // chain segment ordered blocks[0]<-blocks[1]<-blocks[2]...
  repeated blockchainpb.Block blocks = 1;
}

message GetBlockRequest {
  option (mir.event) = true;

  uint64  request_id    = 1;
  string  source_module = 2 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.ModuleID"];
  
  uint64  block_id      = 3;
}

message GetBlockResponse {
  option (mir.event) = true;

  uint64              request_id  = 1;
  bool                found       = 2;
  blockchainpb.Block  block       = 3;
}